tests/errors/byte_buffer_get_oob_panics.ptt
use std/byte_buffer

spark {
  b is ByteBuffer()
  b.push(1)
  yell(b.get(4))
}
